--- a/StepByStep Application/Views/MainWindow.xaml
+++ b/StepByStep Application/Views/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StepByStep_Application"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="StepByStep" Height="450" Width="800">
     <Grid>
+        <Label Content="Список пользователей" HorizontalAlignment="Left" Margin="10,8,0,0" VerticalAlignment="Top" Width="150"/>
+        <Label Content="График по выбранному пользователю" HorizontalAlignment="Left" Margin="450,10,0,0" VerticalAlignment="Top" Width="230"/>
 
     </Grid>
 </Window>
